--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
+    "mysql2": "^3.4.2",
     "nodemon": "^2.0.22",
     "xss-clean": "^0.1.4"
   }
